--- a/src/index.html
+++ b/src/index.html
@@ -1,4 +1,3 @@
-<!doctype html>
 <!DOCTYPE html>
 <html>
 
@@ -22,7 +21,6 @@
 
 <body>
 
-
-  <script src="bundle.js?2022/4/14-13:11:27 " ></script></body>
+</body>
 
 </html>
