--- a/public/index.html
+++ b/public/index.html
@@ -1,28 +1,26 @@
 <!doctype html>
 <!DOCTYPE html>
 <html>
-
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="shortcut icon" href="favicon.png">
-  <title>Game</title>
-  <style>
-    body {
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      flex-wrap: wrap;
-      margin: 0;
-      height: 100vh;
-      background: black;
-    }
-  </style>
-</head>
-
-<body>
-
-
-  <script src="bundle.js?2022/4/14-17:39:38" ></script></body>
-
+  <head>
+    <meta charset="UTF-8" >
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" >
+    <link rel="shortcut icon" href="favicon.png" >
+    <title>Game</title>
+    <style>
+      body {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        flex-wrap: wrap;
+        margin: 0;
+        height: 100vh;
+        background: black;
+      }
+      canvas {
+        max-width: 100%;
+      }
+    </style>
+  </head>
+  <body>
+  <script src="bundle.js?2022/4/14-18:07:08" ></script></body>
 </html>
