--- a/public/index.html
+++ b/public/index.html
@@ -17,10 +17,11 @@
         background: black;
       }
       canvas {
-        max-width: 100%;
+        max-width: 100vw;
+        max-height: 100vh;
       }
     </style>
   </head>
   <body>
-  <script src="bundle.js?2022/4/14-18:07:08" ></script></body>
+  <script src="bundle.js?2022/4/14-19:26:04" ></script></body>
 </html>
