--- a/src/index.html
+++ b/src/index.html
@@ -16,7 +16,8 @@
         background: black;
       }
       canvas {
-        max-width: 100%;
+        max-width: 100vw;
+        max-height: 100vh;
       }
     </style>
   </head>
