--- a/public/index.html
+++ b/public/index.html
@@ -23,5 +23,5 @@
     </style>
   </head>
   <body>
-  <script src="bundle.js?2022/4/14-19:26:04" ></script></body>
+  <script src="bundle.js?2022/4/14@19:46:17" ></script></body>
 </html>
