--- a/public/index.html
+++ b/public/index.html
@@ -3,7 +3,30 @@
 <html>
   <head>
     <meta charset="UTF-8" >
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" >
+    <meta id="viewport" name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no" > 
+    <!-- 禁止点击telephone，email --> 
+    <meta name="format-detection" content="telephone=no, email=no" > 
+    <!-- 启用360浏览器的极速模式(webkit) --> 
+    <meta name="renderer" content="webkit" > 
+    <!-- 删除默认的苹果工具栏和菜单栏 --> 
+    <meta name="apple-mobile-web-app-capable" content="yes" > 
+    <!-- 避免IE使用兼容模式 --> 
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" > 
+    <!-- 针对手持设备优化，主要是针对一些老的不识别viewport的浏览器，比如黑莓 --> 
+    <meta name="HandheldFriendly" content="true" > 
+    <!-- 微软的老式浏览器 --> 
+    <meta name="MobileOptimized" content="320" > 
+    <!-- UC强制全屏 --> 
+    <meta name="full-screen" content="yes" > 
+    <!-- QQ强制全屏 --> 
+    <meta name="x5-fullscreen" content="true" > 
+    <!-- UC应用模式 --> 
+    <meta name="browsermode" content="application" > 
+    <!-- QQ应用模式 --> 
+    <meta name="x5-page-mode" content="app" > 
+    <!-- windows phone 点击无高光 --> 
+    <meta name="msapplication-tap-highlight" content="no" > 
+    
     <link rel="shortcut icon" href="favicon.png" >
     <title>Game</title>
     <style>
@@ -23,5 +46,5 @@
     </style>
   </head>
   <body>
-  <script src="bundle.js?2022/4/14@20:05:15" ></script></body>
+  <script src="bundle.js?2022/4/14@20:25:10" ></script></body>
 </html>
