--- a/src/index.html
+++ b/src/index.html
@@ -140,7 +140,7 @@
         el.classList.add('btn')
         el.textContent = title || code
         el.style.transform = `translate(${x * 100}%, ${y * 100}%)`
-        el.onclick = function () {
+        el.onmousedown = function (e) {
           var event = document.createEvent('Event');
           // var event = new Event('keydown');
           event.code = code
@@ -148,6 +148,8 @@
           event.initEvent('keydown', true, true);
           // The form element listens for the custom "awesome" event and then consoles the output of the passed text() method
           document.dispatchEvent(event);
+          e.preventDefault()
+          e.stopPropagation()
         }
         root.appendChild(el)
       });
