--- a/public/index.html
+++ b/public/index.html
@@ -147,6 +147,7 @@
           event.code = code
           // Define that the event name is 'build'.
           event.initEvent('keydown', true, true);
+          console.log('in')
           // The form element listens for the custom "awesome" event and then consoles the output of the passed text() method
           document.dispatchEvent(event);
           e.preventDefault()
@@ -160,6 +161,6 @@
   </script>
 
 
-  <script src="bundle.js?2022/4/19@09:24:13" ></script></body>
+  <script src="bundle.js?2022/5/1@18:35:16" ></script></body>
 
 </html>
