--- a/public/index.html
+++ b/public/index.html
@@ -84,6 +84,6 @@
   <div class="direction"></div>
   <div class="control"></div>
 
-  <script src="bundle.js?2022/5/24@23:17:45" ></script></body>
+  <script src="bundle.js?2022/6/8" ></script></body>
 
 </html>
