--- a/public/index.html
+++ b/public/index.html
@@ -3,33 +3,33 @@
 <html>
 
 <head>
-  <meta charset="UTF-8" >
+  <meta charset="UTF-8">
   <meta id="viewport" name="viewport"
     content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no" />
   <!-- 禁止点击telephone，email -->
-  <meta name="format-detection" content="telephone=no, email=no" >
+  <meta name="format-detection" content="telephone=no, email=no">
   <!-- 启用360浏览器的极速模式(webkit) -->
-  <meta name="renderer" content="webkit" >
+  <meta name="renderer" content="webkit">
   <!-- 删除默认的苹果工具栏和菜单栏 -->
-  <meta name="apple-mobile-web-app-capable" content="yes" >
+  <meta name="apple-mobile-web-app-capable" content="yes">
   <!-- 避免IE使用兼容模式 -->
-  <meta http-equiv="X-UA-Compatible" content="IE=edge" >
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <!-- 针对手持设备优化，主要是针对一些老的不识别viewport的浏览器，比如黑莓 -->
-  <meta name="HandheldFriendly" content="true" >
+  <meta name="HandheldFriendly" content="true">
   <!-- 微软的老式浏览器 -->
-  <meta name="MobileOptimized" content="320" >
+  <meta name="MobileOptimized" content="320">
   <!-- UC强制全屏 -->
-  <meta name="full-screen" content="yes" >
+  <meta name="full-screen" content="yes">
   <!-- QQ强制全屏 -->
-  <meta name="x5-fullscreen" content="true" >
+  <meta name="x5-fullscreen" content="true">
   <!-- UC应用模式 -->
-  <meta name="browsermode" content="application" >
+  <meta name="browsermode" content="application">
   <!-- QQ应用模式 -->
-  <meta name="x5-page-mode" content="app" >
+  <meta name="x5-page-mode" content="app">
   <!-- windows phone 点击无高光 -->
-  <meta name="msapplication-tap-highlight" content="no" >
+  <meta name="msapplication-tap-highlight" content="no">
 
-  <link rel="shortcut icon" href="favicon.png" >
+  <link rel="shortcut icon" href="favicon.png">
   <title>Game</title>
   <style>
     body {
@@ -77,6 +77,14 @@
       user-select: none;
       opacity: 0.7;
     }
+
+    div#game {
+      position: absolute;
+      /* width: 100%; */
+      /* height: 100%; */
+      transform: rotateZ(90deg);
+      transform-origin: center;
+    }
   </style>
 </head>
 
@@ -84,6 +92,10 @@
   <div class="direction"></div>
   <div class="control"></div>
 
-  <script src="bundle.js?2022/6/8" ></script></body>
+  <div id="game">
+
+  </div>
+  <script src="bundle.js?2022/6/8"></script>
+</body>
 
 </html>
