--- a/public/index.html
+++ b/public/index.html
@@ -43,8 +43,9 @@
     }
 
     canvas {
-      max-width: 100vw;
-      max-height: 100vh;
+      max-width: 100vh;
+      max-height: 100vw;
+      display: block;
     }
   </style>
   <style>
@@ -79,9 +80,7 @@
     }
 
     div#game {
-      position: absolute;
-      /* width: 100%; */
-      /* height: 100%; */
+      /* position: absolute; */
       transform: rotateZ(90deg);
       transform-origin: center;
     }
