--- a/public/index.html
+++ b/public/index.html
@@ -47,11 +47,11 @@
         /* position: absolute; */
         transform: rotateZ(90deg);
         transform-origin: center;
+        max-width: 100vh;
+        max-height: 100vw;
       }
 
       canvas {
-        max-width: 100vh;
-        max-height: 100vw;
         display: block;
       }
     }
@@ -90,12 +90,7 @@
 </head>
 
 <body>
-  <div class="direction"></div>
-  <div class="control"></div>
-
-  <div id="game">
-
-  </div>
+  <div id="game"></div>
   <script src="bundle.js?2022/6/8"></script>
 </body>
 
