--- a/public/index.html
+++ b/public/index.html
@@ -56,6 +56,12 @@
         max-height: 100vw;
       }
     }
+
+    canvas {
+        display: block;
+        max-width: 100vw;
+        max-height: 100vh;
+      }
   </style>
   <style>
     .direction {
