--- a/public/index.html
+++ b/public/index.html
@@ -42,10 +42,12 @@
       background: black;
     }
 
-    canvas {
-      display: block;
-      max-width: 100vw;
-      max-height: 100vh;
+    @media screen and (min-width:576px) {
+      canvas {
+        display: block;
+        max-width: 100vw;
+        max-height: 100vh;
+      }
     }
 
     @media screen and (max-width:575px) {
