--- a/public/index.html
+++ b/public/index.html
@@ -29,7 +29,7 @@
   <!-- windows phone 点击无高光 -->
   <meta name="msapplication-tap-highlight" content="no">
 
-  <link rel="shortcut icon" href="favicon.png">
+  <!-- <link rel="shortcut icon" href="favicon.png"> -->
   <title>Game</title>
   <style>
     body {
