--- a/public/index.html
+++ b/public/index.html
@@ -1,56 +1,65 @@
 <!DOCTYPE html>
 <html>
+  <head>
+    <meta charset="UTF-8" />
+    <meta
+      id="viewport"
+      name="viewport"
+      content="width=device-width, initial-scale=1, user-scalable=no"
+    />
 
-<head>
-  <meta charset="UTF-8">
-  <meta id="viewport" name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
+    <!-- 删除默认的苹果工具栏和菜单栏 -->
+    <meta name="apple-mobile-web-app-capable" content="yes" />
+    <!-- UC强制全屏 -->
+    <meta name="full-screen" content="yes" />
+    <!-- QQ强制全屏 -->
+    <meta name="x5-fullscreen" content="true" />
+    <!-- UC应用模式 -->
+    <meta name="browsermode" content="application" />
+    <!-- QQ应用模式 -->
+    <meta name="x5-page-mode" content="app" />
 
-  <!-- 删除默认的苹果工具栏和菜单栏 -->
-  <meta name="apple-mobile-web-app-capable" content="yes">
-  <!-- UC强制全屏 -->
-  <meta name="full-screen" content="yes">
-  <!-- QQ强制全屏 -->
-  <meta name="x5-fullscreen" content="true">
-  <!-- UC应用模式 -->
-  <meta name="browsermode" content="application">
-  <!-- QQ应用模式 -->
-  <meta name="x5-page-mode" content="app">
-
-  <title>Game</title>
-  <style>
-    body {
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      flex-wrap: wrap;
-      margin: 0;
-      height: 100vh;
-      background: black;
-    }
-
-    canvas {
-      max-width: 100vw;
-      max-height: 100vh;
-      vertical-align: top;
-    }
-
-    @media screen and (max-width:575px) {
-      #game {
-        transform: rotateZ(90deg);
-        transform-origin: center;
+    <title>Game</title>
+    <style>
+      body {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        flex-wrap: wrap;
+        margin: 0;
+        height: 100vh;
+        background: black;
       }
 
       canvas {
-        max-width: 100vh;
-        max-height: 100vw;
+        max-width: 100vw;
+        max-height: 100vh;
+        vertical-align: top;
       }
-    }
-  </style>
-</head>
 
-<body>
-  <div id="game"></div>
-  <script src="Bundle/game.js"></script>
-</body>
+      @media screen and (max-width: 575px) {
+        #game {
+          transform: rotateZ(90deg);
+          transform-origin: center;
+        }
 
+        canvas {
+          max-width: 100vh;
+          max-height: 100vw;
+        }
+      }
+    </style>
+  </head>
+
+  <body>
+    <div id="game"></div>
+    <script type="module">
+      import Engine from "./Bundle/Engine.js";
+      import Mota from "./Bundle/Game.js";
+
+      const mota = new Engine(Mota);
+
+      window.mota = mota;
+    </script>
+  </body>
 </html>
