--- a/public/index.html
+++ b/public/index.html
@@ -56,10 +56,7 @@
     <script type="module">
       import Engine from "./Bundle/Engine.js";
       import Mota from "./Bundle/Game.js";
-
-      const mota = new Engine(Mota);
-
-      window.mota = mota;
+      window.mota = new Engine(Mota);
     </script>
   </body>
 </html>
