--- a/public/index.html
+++ b/public/index.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
-<html>
+<html lang="zh-cn">
   <head>
     <meta charset="UTF-8" />
     <meta
       id="viewport"
       name="viewport"
-      content="width=device-width, initial-scale=1, user-scalable=no"
+      content="width=device-width, initial-scale=1"
     />
 
     <!-- 删除默认的苹果工具栏和菜单栏 -->
