--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,7 @@
     />
 
     <!-- 删除默认的苹果工具栏和菜单栏 -->
-    <meta name="apple-mobile-web-app-capable" content="yes" />
+    <meta name="mobile-web-app-capable" content="yes" />
     <!-- UC强制全屏 -->
     <meta name="full-screen" content="yes" />
     <!-- QQ强制全屏 -->
@@ -30,7 +30,7 @@
         height: 100vh;
         background: black;
       }
-      
+
       canvas {
         max-width: 100vw;
         max-height: 100vh;
